# Scout

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  check_user.py  fix_db.py  pyproject.toml  test_agents.py  test_db.py
backend/src/scout/: __init__.py  main.py
backend/src/scout/agents/: __init__.py  base.py  implementations.py  learning_engine.py  supervisor.py
backend/src/scout/application/: __init__.py
backend/src/scout/application/dto/: __init__.py
backend/src/scout/application/services/: __init__.py  action_executor.py  approval_service.py  lesson_export_service.py  llm_context_builder.py  log_preprocessor.py  timeout_service.py
backend/src/scout/core/: __init__.py  config.py  error_handler.py  exceptions.py  graph.py  licensing.py  logger.py  logging.py  model_router.py  security.py  state.py
backend/src/scout/domain/: __init__.py
backend/src/scout/domain/entities/: __init__.py  approval_policy.py  asset.py  base.py  pending_action.py  threat.py  (+1 more)
backend/src/scout/guards/: __init__.py  llm_guard.py
backend/src/scout/infrastructure/: __init__.py
backend/src/scout/modules/: __init__.py  base.py  registry.py
backend/src/scout/scripts/: create_tables.py  export_lessons.py  train_lesson_model.py
backend/src/scout/tools/: __init__.py  base.py  masscan.py  netdiscover.py  nmap.py  oui_lookup.py  registry.py  scapy_sniffer.py  wireshark.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_entities.py  test_modules.py
(+127 files in other folders)
